# fafnir_ai

./: .gitignore  README.md  compare_server.py  fafnir_bug_report.md  fafnir_rule.txt  fast_server_0424.py  howtouse.txt  manual.md  manual_jp.md  old_requirements.txt  old_requirements_utf8.txt  protocol.py  pyproject.toml  requirements.txt  rl_manual.md  rl_manual_v2.md  server.py  server_0424.py  start_server.bat
cfr_ai/: README.md  cfr_manual_jp.md
cfr_ai/ai/: __init__.py  action_space.py  evaluate.py  fairness_check.py  fast_engine.py  game_engine.py  league.py  networks.py  observation.py  parallel.py  search.py  symmetry.py  train.py  trainer.py
cfr_ai/clients/: cfr_bot.py
clients/: ai_bot_sample.py  human_cli.py  rl_bot.py  rl_bot_v1.py  rl_bot_v2.py  spectator_gui.py
clients/spectator_web/: app.js  index.html  style.css
clients/web_gui/: app.js  index.html  style.css
mppo_ai/: manual_jp.md  mppo_manual_jp.md
mppo_ai/clients/: pimc_bot.py  pimc_bot_v2.py  pimc_bot_v3.py  rl_bot_v1.py  rl_bot_v2.py  rl_bot_v3.py
mppo_ai/rl/: _test_round.py  evaluate.py  fast_engine.py  game_env.py  game_env_fast.py  league.py  train.py
rl/: evaluate.py  fast_engine.py  game_env.py  game_env_fast.py  train.py
rl/__pycache__/: fast_engine._clamp-75.py313.1.nbc  fast_engine._clamp-75.py313.nbi  fast_engine._do_round_end-147.py313.1.nbc  fast_engine._do_round_end-147.py313.nbi  fast_engine._draw_n-39.py313.1.nbc  fast_engine._draw_n-39.py313.2.nbc  fast_engine._draw_n-39.py313.nbi  fast_engine._draw_one-22.py313.1.nbc  fast_engine._draw_one-22.py313.nbi  fast_engine._hand_score-129.py313.1.nbc  fast_engine._hand_score-129.py313.2.nbc  fast_engine._hand_score-129.py313.nbi  fast_engine._random_bid-80.py313.1.nbc  fast_engine._random_bid-80.py313.nbi  fast_engine._rank_colors-107.py313.1.nbc  fast_engine._rank_colors-107.py313.nbi  fast_engine._setup_offer-50.py313.1.nbc  fast_engine._setup_offer-50.py313.nbi  fast_engine.build_mask-212.py313.1.nbc  fast_engine.build_mask-212.py313.nbi  fast_engine.build_obs-184.py313.1.nbc  fast_engine.build_obs-184.py313.nbi  fast_engine.fast_reset-229.py313.1.nbc  fast_engine.fast_reset-229.py313.nbi  (+2 more)
(+5 files in other folders)
