[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = ""
requires-python = ">=3.14"
dependencies = [
    "absl-py==2.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "ansicon==1.89.0",
    "anyio==4.13.0",
    "appdirs==1.4.4",
    "attrs==26.1.0",
    "bidict==0.23.1",
    "blessed==1.38.0",
    "click==8.3.2",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "fastapi==0.135.3",
    "filelock==3.29.0",
    "flyingcircus==0.1.4.1",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "grpcio==1.80.0",
    "gymnasium==1.2.3",
    "h11==0.16.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jinxed==1.4.0",
    "kiwisolver==1.5.0",
    "llvmlite==0.47.0",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.6.1",
    "numba==0.65.0",
    "numpy==2.4.4",
    "orjson==3.11.9",
    "packaging==26.0",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "propcache==0.4.1",
    "protobuf==7.34.1",
    "pydantic==2.13.0",
    "pydantic-core==2.46.0",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-engineio==4.13.1",
    "python-socketio==5.16.1",
    "pytk==0.0.2.1",
    "rich==15.0.0",
    "sb3-contrib==2.8.0",
    "setuptools==81.0.0",
    "setuptools-scm==10.0.5",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "stable-baselines3==2.8.0",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.11.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "uvicorn==0.44.0",
    "vcs-versioning==1.1.1",
    "wcwidth==0.6.0",
    "werkzeug==3.1.8",
    "wsproto==1.3.2",
    "yarl==1.23.0",
]
